--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     </div>
 
     <div class="container">
-        <h1>Ya comenzó nuestro año 20 y 24</h1>
-        <p>Demos todo de nosotros para lograr nuestras metas, personales y como pareja. 
-            Te amo mucho Mininita.</p></p>
+        <h1>Cumplimos 1 año en nuestro año 20 y 24</h1>
+        <p>No recuerdo un día en que no te despierte con un buenos días, o buenas tardes jijij. Espero en un futuro no muy lejano, sea con un besito en la frente.</p></p>
         <button type="button" class="color-button" id="win" onclick="abrir();"> Abrir </button>
     </div>
 
