--- a/GameAll.html
+++ b/GameAll.html
@@ -147,7 +147,7 @@
         <div class="heart"></div>
         </br>
         </br>
-        <button class="restart-button" onclick="window.location.href='index.html';">Volver al inicio</button>
+        <button class="restart-button" onclick="window.location.href='Galería 12/cholo.html';">Galería 12</button>
     </div>
 
     <script>
@@ -188,8 +188,8 @@
             gameActive = false;
             heart.style.display = 'none';
 
-            if (score > 20) {
-                messageDisplay.innerHTML = `¡Yeeeiiii! aplastaste ${score} corazones. ¡Dale amoooor, reclama tu besito!`;
+            if (score > 10) {
+                messageDisplay.innerHTML = `¡Yeeeiiii! aplastaste ${score} corazones. ¡Dale amoooor, reclama tu besito y entra a la galería 12!`;
             } else {
                 messageDisplay.innerHTML = `¡Un poquititititito más!, solo unos ${score} corazónes. ¡Te amoooooo, un poco más mi vida!`;
             }
