--- a/GameAll.html
+++ b/GameAll.html
@@ -141,11 +141,12 @@
         <div class="background-heart" style="top: 95%; left: 70%; background-image: url('imagenes/Imagen170.jpeg');"></div>
 
         <div class="score">Corazones aplastados 😼: 0</div>
-        <div class="message">Aplasta los corazones, mininitaa!</div>
-        <div class="heart"></div>
-        </br>
-        </br>
-        <button class="restart-button" onclick="window.location.href='Galería 12/cholo.html';">Galería 12</button>
+<div class="message">Aplasta los corazones, mininitaa!</div>
+<div class="heart"></div>
+</br>
+</br>
+<button class="restart-button" onclick="window.location.href='https://drive.google.com/drive/folders/12qA3jX7SXRAwZ0pqN2AnqauQFMiYhzaP?usp=sharing';">Galería 12</button>
+
     </div>
 
     <script>
