--- a/GameAll.html
+++ b/GameAll.html
@@ -145,7 +145,7 @@
 <div class="heart"></div>
 </br>
 </br>
-<button class="restart-button" onclick="window.location.href='https://drive.google.com/drive/folders/12qA3jX7SXRAwZ0pqN2AnqauQFMiYhzaP?usp=sharing';">Galería 12</button>
+<button class="restart-button" onclick="window.open('https://drive.google.com/drive/folders/12qA3jX7SXRAwZ0pqN2AnqauQFMiYhzaP?usp=sharing', '_blank');">Galería 12</button>
 
     </div>
 
