--- a/Galeria10.html
+++ b/Galeria10.html
@@ -18,49 +18,49 @@
     </div>
 
     <div class="gallery">
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen279.jpg')">
+<div class="photo" onclick="openModal('Cevichiitooo', 'Que rico día amor', 'imagenes/Imagen279.jepg')">
     <img src="imagenes/Imagen279.jpeg" alt="Foto 279">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen280.jpg')">
+<div class="photo" onclick="openModal('JHhjashjhjas', 'Me ganaste el jueguete ps pipipipi', 'imagenes/Imagen280.jepg')">
     <img src="imagenes/Imagen280.jpeg" alt="Foto 280">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen281.jpeg')">
+<div class="photo" onclick="openModal('Me', 'Mininita jateandooo???', 'imagenes/Imagen281.jpeg')">
     <img src="imagenes/Imagen281.jpeg" alt="Foto 281">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen282.jpeg')">
+<div class="photo" onclick="openModal('Papas', 'Caporales Xd', 'imagenes/Imagen282.jpeg')">
     <img src="imagenes/Imagen282.jpeg" alt="Foto 282">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen283.jpeg')">
+<div class="photo" onclick="openModal('Ayuuuaaa', 'JKHhjkashjkAHJKS siempre tmr', 'imagenes/Imagen283.jpeg')">
     <img src="imagenes/Imagen283.jpeg" alt="Foto 283">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen284.jpeg')">
+<div class="photo" onclick="openModal('AKGCHJAHJSDKHJASD', 'Pata asquerooosaaaa 4 dedos wtff???', 'imagenes/Imagen284.jpeg')">
     <img src="imagenes/Imagen284.jpeg" alt="Foto 284">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen285.jpeg')">
+<div class="photo" onclick="openModal('Papas caporales', 'JHAJHSHJDJHA mininita te amo', 'imagenes/Imagen285.jpeg')">
     <img src="imagenes/Imagen285.jpeg" alt="Foto 285">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen286.jpeg')">
+<div class="photo" onclick="openModal('Amando', 'Los amo con todo amor, son mi todo', 'imagenes/Imagen286.jpeg')">
     <img src="imagenes/Imagen286.jpeg" alt="Foto 286">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen287.jpeg')">
+<div class="photo" onclick="openModal('Avil', 'Tu gatiitooo', 'imagenes/Imagen287.jpeg')">
     <img src="imagenes/Imagen287.jpeg" alt="Foto 287">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen288.jpeg')">
+<div class="photo" onclick="openModal('Papas semi favs', 'Rikisima la chichita', 'imagenes/Imagen288.jpeg')">
     <img src="imagenes/Imagen288.jpeg" alt="Foto 288">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen289.jpeg')">
+<div class="photo" onclick="openModal('En efecto', 'Mininita jateando asdjhajhsdjasd', 'imagenes/Imagen289.jpeg')">
     <img src="imagenes/Imagen289.jpeg" alt="Foto 289">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen290.jpeg')">
+<div class="photo" onclick="openModal('Mininita ', 'Comiendo sus papitas and chichita', 'imagenes/Imagen290.jpeg')">
     <img src="imagenes/Imagen290.jpeg" alt="Foto 290">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen291.jpeg')">
+<div class="photo" onclick="openModal('Achuuuu', 'Jhhjashjhjas', 'imagenes/Imagen291.jpeg')">
     <img src="imagenes/Imagen291.jpeg" alt="Foto 291">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen292.jpeg')">
+<div class="photo" onclick="openModal('Asao', 'Ta pensante', 'imagenes/Imagen292.jpeg')">
     <img src="imagenes/Imagen292.jpeg" alt="Foto 292">
 </div>
-<div class="photo" onclick="openModal('', '', 'imagenes/Imagen293.jpeg')">
+<div class="photo" onclick="openModal('Día de....', 'Chikaukai', 'imagenes/Imagen293.jpeg')">
     <img src="imagenes/Imagen293.jpeg" alt="Foto 293">
 </div>
 
